Fixed issues for HTML Validator

--- a/theme.css
+++ b/theme.css
@@ -57,7 +57,6 @@ h3 {
     font-family: Arial, sans-serif;
     color: #3a4f7e;
     font-size: 20pt;
- 
 }
 
 h4 {
@@ -227,7 +226,7 @@ li a:hover {
     text-align: left;
 }
 
-.education-panel h4 {
+.education-panel h3 {
     color: rgb(58, 79, 126);
     font-size: 18pt;
     margin-top: 10px;
@@ -242,7 +241,7 @@ li a:hover {
     font-size: 15pt;
 }
 
-.education-panel h5 {
+.education-panel h4 {
     color: rgb(58, 79, 126);
     font-size: 12pt;
     font-style: italic;
@@ -310,14 +309,14 @@ li a:hover {
     text-align: left;
 }
 
-.experience-panel h4 {
+.experience-panel h3 {
     color: rgb(58, 79, 126);
     font-size: 18pt;
     margin-top: 10px;
     margin-bottom: 4px;
 }
 
-.experience-panel h5 {
+.experience-panel h4 {
     color: rgb(58, 79, 126);
     font-size: 12pt;
     font-style: italic;
@@ -399,7 +398,7 @@ li a:hover {
     cursor: pointer;
 }
 
-.ec-text h4 {
+.ec-text h3 {
     color: rgb(58, 79, 126);
     font-size: 18pt;
     margin-top: 10px;
@@ -422,7 +421,7 @@ li a:hover {
     justify-content: center;
     align-items: center;
     animation: fadeIn 0.5s ease-in-out;
-
+    z-index: 100;
 }
 
 .popup-content {
@@ -850,16 +849,16 @@ opacity: 0.3;
         align-items: center;
     }
 
-    .education-panel h4,
-    .experience-panel h4,
-    .ec-panel h4 {
+    .education-panel h3,
+    .experience-panel h3,
+    .ec-panel h3 {
         font-size: 14pt;
         margin-bottom: 10px;
     }
 
-    .education-panel h5,
-    .experience-panel h5,
-    .ec-panel h6 {
+    .education-panel h4,
+    .experience-panel h4,
+    .ec-panel h4 {
         font-size: 14pt;
         margin-bottom: 6px;
     }
@@ -946,23 +945,33 @@ opacity: 0.3;
     display: inline-block;
     border-right: 2px solid #042469c5;
     padding-right: 10px;  
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    color: #3a4f7e;
 }
 
 .slide-in{
     opacity: 1;
 }
 
+.about-pg-container {
+    width:100%;
+    margin: 0;
+    padding: 0;
+}
+
 .about-pg-container h3{
     font-size: 18pt;
 }
 
-
-
-
- 
- 
+.responsive-image {
+    width: 100%;
+}
 
  
+.no-scroll {
+    overflow: hidden;
+}
 
 
 
