--- a/style_mobile.css
+++ b/style_mobile.css
@@ -1,3 +1,4 @@
+/* Media Query for screens with a maximum width of 700px */
 @media only screen and (max-width: 700px) {
     body {
         background-size: cover;
@@ -7,6 +8,7 @@
         width: 90%;
     }
 
+    /* Heading Styles */
     h1 {
         font-size: 30pt;
     }
@@ -23,6 +25,7 @@
         font-size: 14pt;
     }
 
+    /* Adjustments for various elements */
     div {
         width: 100%;
     }
@@ -40,6 +43,7 @@
         width: 120px;
     }
 
+    /* Adjustments for project elements */
     .project-container {
         justify-content: center;
         width: 80%;
@@ -58,6 +62,7 @@
         font-size: 14pt;
     }
 
+    /* Styling for education, experience, and contact sections */
     .education-container,
     .experience-container,
     .ec-container,
@@ -96,6 +101,7 @@
         margin: 20px 0;
     }
 
+    /* Adjustments for extracurricular elements */
     .ec-panel {
          display: flex;
         flex-direction: column;
@@ -122,6 +128,7 @@
         cursor: pointer;
     }
 
+     /* Styling for index panels */
     .index-panel {
         align-items: center;
         text-align: center;
@@ -135,6 +142,7 @@
         margin: auto;
     }
  
+    /* Styling for a specific project panel */
     .project-panel2 {
         position: relative;
         background-color: #45644e55;
