--- a/style_mobile.css
+++ b/style_mobile.css
@@ -82,7 +82,8 @@
 
     .education-panel h3,
     .experience-panel h3,
-    .ec-panel h3 {
+    .ec-panel h3,
+    .about-pg-container h3 {
         font-size: 14pt;
         margin-bottom: 10px;
     }
