--- a/style_mobile.css
+++ b/style_mobile.css
@@ -71,7 +71,7 @@
         padding: 10px;
         margin: 30px 0;
     }
-
+    
     .education-panel,
     .experience-panel,
     .ec-panel {
@@ -189,5 +189,9 @@
     #emailButton img {
         width: 30px;
         height: auto;
+    }
+
+    #animated-text {
+        font-size: 18pt;
     }
 }
